fix connect btn error

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -61,6 +61,13 @@ android:text="結束"
 android:textSize="25dp" />       
 </LinearLayout>
 
+<Button
+android:id="@+id/connect"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:text="連線"
+android:textSize="25dp" />
+
 <TextView
 android:id="@+id/receive"
 android:layout_width="wrap_content"
