--- a/res/menu/more_tab_menu.xml
+++ b/res/menu/more_tab_menu.xml
@@ -5,6 +5,9 @@ xmlns:android="http://schemas.android.com/apk/res/android">
     android:id="@+id/setting"
     android:title="Setting"/>
 <item
+    android:id="@+id/recordlist"
+    android:title="Record"/>
+<item
     android:id="@+id/about"
     android:title="About"/>
 </menu>
