--- a/res/layout/data_item.xml
+++ b/res/layout/data_item.xml
@@ -5,6 +5,12 @@
     android:orientation="vertical" >
     
     <TextView
+        android:id="@+id/txtID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" android:textSize="20sp"/>
+    
+    <TextView
         android:id="@+id/txtDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
